# greentic-designer-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
ci/: local_check.sh
crates/greentic-ext-cli/: Cargo.toml
crates/greentic-ext-cli/src/commands/: dev.rs  disable.rs  doctor.rs  enable.rs  info.rs  install.rs  keygen.rs  list.rs  login.rs  mod.rs  publish.rs  registries.rs  search.rs  sign.rs  uninstall.rs  validate.rs  verify.rs
crates/greentic-ext-cli/src/dev/: event.rs  installer.rs  packer.rs  state.rs  watcher.rs
crates/greentic-ext-cli/src/publish/: mod.rs  validator.rs
crates/greentic-ext-cli/src/scaffold/: contract_lock.rs
crates/greentic-ext-cli/templates/bundle/: Cargo.toml.tmpl  describe.json.tmpl
crates/greentic-ext-cli/templates/bundle/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/common/i18n/: en.json.tmpl
crates/greentic-ext-cli/templates/deploy/: Cargo.toml.tmpl
crates/greentic-ext-cli/templates/deploy/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/design/: Cargo.toml.tmpl
crates/greentic-ext-cli/templates/design/prompts/: system.md.tmpl
crates/greentic-ext-cli/templates/design/src/: lib.rs.tmpl
crates/greentic-ext-cli/templates/provider/: Cargo.toml.tmpl  describe.json.tmpl
crates/greentic-ext-cli/templates/wasm-component/: Cargo.toml.tmpl  README.md.tmpl  gitignore.tmpl
crates/greentic-ext-cli/templates/wasm-component/runtime/: README.md.tmpl
crates/greentic-ext-cli/tests/: cli_dev_watch.rs  cli_e2e.rs  cli_list.rs  cli_new.rs  cli_publish.rs  provider_commands.rs  sign_verify_cmd.rs
crates/greentic-ext-contract/: Cargo.toml
crates/greentic-ext-contract/schemas/: describe-v1.json
crates/greentic-ext-contract/src/: capability.rs  error.rs  hex.rs  kind.rs  pack_writer.rs  schema.rs
crates/greentic-ext-contract/tests/: capability.rs  describe_roundtrip.rs  design_with_gtpack.rs  kind.rs  runtime_gtpack.rs  schema_validate.rs  signature_rt.rs
crates/greentic-ext-registry/: Cargo.toml
crates/greentic-ext-registry/src/: error.rs  hex.rs  lib.rs  lifecycle.rs  local.rs  local_publish.rs  oci.rs  prompt.rs  provider_install.rs  publish.rs  registry.rs  storage.rs  store.rs  types.rs
crates/greentic-ext-registry/tests/: config.rs  credentials.rs  lifecycle.rs  local_publish.rs  local_registry.rs  oci_registry.rs  provider_lifecycle.rs  storage.rs  store_publish.rs  store_registry.rs
crates/greentic-ext-registry/tests/support/: mod.rs
crates/greentic-ext-state/: Cargo.toml
crates/greentic-ext-state/src/: error.rs  state.rs
crates/greentic-ext-state/tests/: state_roundtrip.rs
crates/greentic-ext-testing/: Cargo.toml
crates/greentic-ext-testing/src/: fixture.rs  lib.rs  provider_fixtures.rs
crates/greentic-extension-sdk-cli/: .gitignore  Cargo.toml  build.rs
crates/greentic-extension-sdk-cli/embedded-wit/0.4.2/: extension-design.wit
crates/greentic-extension-sdk-cli/embedded-wit/0.4.3/: extension-deploy.wit  extension-host.wit  extension-provider.wit  runtime-side.wit
crates/greentic-extension-sdk-cli/src/: main.rs
crates/greentic-extension-sdk-cli/src/commands/: disable.rs  doctor.rs  enable.rs  info.rs  install.rs  list.rs  login.rs  mod.rs  new.rs  registries.rs  search.rs  sign.rs  uninstall.rs  validate.rs  verify.rs
crates/greentic-extension-sdk-cli/src/dev/: builder.rs  installer.rs  mod.rs  packer.rs
crates/greentic-extension-sdk-cli/src/publish/: mod.rs  receipt.rs  validator.rs
crates/greentic-extension-sdk-cli/src/scaffold/: embedded.rs  mod.rs  preflight.rs  template.rs
crates/greentic-extension-sdk-cli/templates/bundle/wit/: world.wit.tmpl
crates/greentic-extension-sdk-cli/templates/common/: README.md.tmpl  build.sh.tmpl  gitignore.tmpl
crates/greentic-extension-sdk-cli/templates/common/ci/: local_check.sh.tmpl
crates/greentic-extension-sdk-cli/templates/deploy/: describe.json.tmpl
crates/greentic-extension-sdk-cli/templates/deploy/wit/: world.wit.tmpl
crates/greentic-extension-sdk-cli/templates/design/: describe.json.tmpl
crates/greentic-extension-sdk-cli/templates/design/wit/: world.wit.tmpl
crates/greentic-extension-sdk-cli/templates/provider/src/: lib.rs.tmpl
crates/greentic-extension-sdk-cli/templates/provider/wit/: world.wit.tmpl
crates/greentic-extension-sdk-cli/templates/wasm-component/: describe.json.tmpl  rust-toolchain.toml.tmpl
crates/greentic-extension-sdk-cli/templates/wasm-component/extension/: Cargo.toml.tmpl
crates/greentic-extension-sdk-cli/templates/wasm-component/extension/src/: lib.rs.tmpl
crates/greentic-extension-sdk-cli/templates/wasm-component/extension/wit/: world.wit.tmpl
crates/greentic-extension-sdk-cli/tests/: cli_dev_once.rs  cli_disable.rs  cli_e2e.rs  cli_enable.rs  cli_list.rs  cli_new.rs  provider_commands.rs  rescaffold_reference_exts.rs  sign_verify_cmd.rs
crates/greentic-extension-sdk-contract/: Cargo.toml
crates/greentic-extension-sdk-contract/src/: lib.rs  signature.rs
crates/greentic-extension-sdk-contract/src/describe/: mod.rs  provider.rs
crates/greentic-extension-sdk-contract/tests/: capability.rs  describe_roundtrip.rs  design_with_gtpack.rs  kind.rs  runtime_gtpack.rs  schema_validate.rs  signature_rt.rs
crates/greentic-extension-sdk-registry/: Cargo.toml
crates/greentic-extension-sdk-registry/src/: config.rs  credentials.rs  error.rs  hex.rs  lifecycle.rs  local.rs  oci.rs  prompt.rs  provider_install.rs  publish.rs  registry.rs  storage.rs  store.rs  types.rs
crates/greentic-extension-sdk-registry/tests/: config.rs  credentials.rs  lifecycle.rs  local_publish.rs  local_registry.rs  oci_registry.rs  provider_lifecycle.rs  storage.rs  store_publish.rs  store_registry.rs
crates/greentic-extension-sdk-state/: Cargo.toml
crates/greentic-extension-sdk-state/src/: atomic.rs  lib.rs
crates/greentic-extension-sdk-state/tests/: state_roundtrip.rs
crates/greentic-extension-sdk-testing/: Cargo.toml
crates/greentic-extension-sdk-testing/src/: fixture.rs  gtxpack.rs  provider_fixtures.rs
wit/: extension-bundle.wit
(+1 files in other folders)
