[package]
name = "greentic-ext-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gtdx: CLI for Greentic Designer Extensions"

[[bin]]
name = "gtdx"
path = "src/main.rs"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"] }
greentic-ext-contract = { path = "../greentic-ext-contract", version = "0.4" }
greentic-ext-registry = { path = "../greentic-ext-registry", version = "0.4" }
greentic-ext-state = { path = "../greentic-ext-state", version = "0.4" }
include_dir = { workspace = true }
notify-debouncer-full = { workspace = true }
pkcs8 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
greentic-ext-testing = { path = "../greentic-ext-testing", version = "0.4" }
jsonschema = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
