[package]
name = "greentic-extension-sdk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gtdx: CLI for Greentic Designer Extensions"

[[bin]]
name = "gtdx"
path = "src/main.rs"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
directories = { workspace = true }
ed25519-dalek = { workspace = true, features = ["pkcs8", "pem"] }
greentic-extension-sdk-contract = { path = "../greentic-extension-sdk-contract", version = "0.4" }
greentic-extension-sdk-registry = { path = "../greentic-extension-sdk-registry", version = "0.4" }
greentic-extension-sdk-state = { path = "../greentic-extension-sdk-state", version = "0.4" }
include_dir = { workspace = true }
notify-debouncer-full = { workspace = true }
pkcs8 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[dev-dependencies]
greentic-extension-sdk-testing = { path = "../greentic-extension-sdk-testing", version = "0.4" }
jsonschema = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
